[package]
name = "playing-with-money"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["cargo"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rust_decimal = "1.23"
rust_decimal_macros = "1.23"
env_logger = "0.9"
